# recipes-assistant

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/foodgram/api/: admin.py  fields.py  filters.py  mixins.py  pagination.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/foodgram/api/services/: __init__.py  add_ingredient.py  add_or_del.py  check_is_it_in.py  check_value.py  create_pdf.py  verifications.py
backend/foodgram/foodgram/: settings.py  urls.py
backend/foodgram/recipes/: admin.py  fields.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
backend/foodgram/recipes/migrations/: 0001_initial.py  0002_auto_20220131_1920.py  0002_auto_20220203_1835.py  0002_auto_20220205_1810.py  0002_auto_20220206_1247.py  0002_auto_20220221_1059.py  0002_auto_20220223_1520.py  0002_auto_20220329_1616.py  0003_alter_ingredient_name.py  0003_alter_shoppinglist_user.py  0003_auto_20220306_1622.py  0003_rename_ingridients_recipe_ingredients.py  0004_auto_20220201_0927.py  0004_auto_20220221_1230.py  0004_auto_20220307_0922.py  0005_auto_20220201_1034.py  0005_remove_ingredientinrecipe_уникальность ингредиента в рецепте.py  0005_rename_ingredientrecipe_ingredientinrecipe.py  0006_auto_20220201_1247.py  0006_ingredientinrecipe_уникальность ингредиента в рецепте.py  0007_auto_20220201_1247.py  0007_delete_favoritelist.py  0008_delete_shoppinglist.py  0008_recipe_tags.py
backend/foodgram/users/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
(+20 files in other folders)
