[tool.poetry]
name = "foodgram-project"
version = "0.1.0"
description = "Продуктовый помощник"
authors = ["Светлана Логвинова"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2.11"
Pillow = "^9.0.0"
djangorestframework = "^3.13.1"
django-filter = "^21.1"
reportlab = "^3.6.8"
gunicorn = "^20.1.0"
psycopg = "^3.0.11"
python-dotenv = "^0.20.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
